@@ -32,9 +32,6 @@ import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.Security;
 
-import static com.guardtime.ksi.util.Util.join;
-import static com.guardtime.ksi.util.Util.toByteArray;
-
 /**
  * Functionality for hashing data.
  * <p> Data hasher is stateful, all new data added is added to the
@@ -194,8 +191,7 @@ public class DataHasher {
     }
 
     /**
-     * Adds {@link DataHash#getAlgorithm()}.{@link HashAlgorithm#getId() getId()} and
-     * {@link DataHash#getValue()} to the digest.
+     * Adds {@link DataHash#getImprint()} to the digest.
      *
      * @param dataHash input digest.
      *
@@ -205,7 +201,7 @@ public class DataHasher {
      */
     public final DataHasher addData(DataHash dataHash) {
         Util.notNull(dataHash, "DataHash");
-        return addData(join(toByteArray(dataHash.getAlgorithm().getId()), dataHash.getValue()));
+        return addData(dataHash.getImprint());
     }
 
     /**
